--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -36,11 +37,11 @@
     "@babel/core": "^7.20.0",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
+    "@graphql-codegen/introspection": "4.0.0",
     "@types/react": "~18.2.14",
     "@types/styled-components-react-native": "^5.2.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "@graphql-codegen/introspection": "4.0.0"
+    "typescript": "^5.2.2"
   },
   "private": true
 }
