--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "apollo3-cache-persist": "^0.14.1",
     "expo": "~49.0.7",
     "expo-asset": "~8.10.1",
     "expo-font": "~11.4.0",
