--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.1",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -21,7 +22,9 @@
     "apollo3-cache-persist": "^0.14.1",
     "expo": "~49.0.7",
     "expo-asset": "~8.10.1",
+    "expo-camera": "~13.4.2",
     "expo-font": "~11.4.0",
+    "expo-media-library": "~15.4.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "graphql": "^15.8.0",
