--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "apollo-server-core": "^3.12.1",
     "apollo3-cache-persist": "^0.14.1",
     "expo": "~49.0.7",
     "expo-asset": "~8.10.1",
@@ -33,7 +34,7 @@
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-pager-view": "^6.2.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
