--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "apollo-server-core": "^3.12.1",
+    "apollo-upload-client": "^17.0.0",
     "apollo3-cache-persist": "^0.14.1",
     "expo": "~49.0.7",
     "expo-asset": "~8.10.1",
@@ -47,6 +48,7 @@
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/introspection": "4.0.0",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/react": "~18.2.14",
     "@types/styled-components-react-native": "^5.2.1",
     "ts-node": "^10.9.1",
